# sts2-modding-mcp

./: .gitignore  CLAUDE.md  GETTING_STARTED.md  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: nexus-release.yml
CleanMenu/: CleanMenu.csproj  mod_manifest.json
CleanMenu/Code/: ModEntry.cs
FoilCards/: FoilCards.csproj  mod_manifest.json
FoilCards/Code/: FoilShader.cs  FoilUpdater.cs  ModEntry.cs
MultiplayerAwards/: MultiplayerAwards.csproj  mod_manifest.json
MultiplayerAwards/Code/: ModEntry.cs
docs/: advanced-generators.md  detailed-setup.md  modding-guides.md  project-structure.md  tools-reference.md  workflows.md
explorer_mod/: GodotExplorer.csproj  mod_manifest.json
explorer_mod/src/: ExplorerCore.cs  GodotExplorer.cs
sts2mcp/: __init__.py  __main__.py  analysis.py  bridge_client.py  character_assets.py  file_watcher.py  game_data.py  gdre_tools.py  godot_explorer_client.py  hot_reload.py  image_gen.py  mod_gen.py  pck_builder.py  project_workflow.py  server.py  setup.py  test_runner.py
sts2mcp/templates/: act_encounter_patch.cs.tpl  ancient_template.cs.tpl  animated_bar_template.cs.tpl  baselib_card_template.cs.tpl  baselib_potion_template.cs.tpl  baselib_power_template.cs.tpl  baselib_relic_template.cs.tpl  card_template.cs.tpl  character_template.cs.tpl  create_visuals_patch.cs.tpl  csproj_baselib_template.cs.tpl  (+36 more)
test_mod/: MCPTest.csproj  mod_manifest.json
tests/: conftest.py  test_analysis.py  test_bridge.py  test_generators.py  test_ingame.py  test_integration.py  test_project_workflow.py  test_server.py
(+111 files in other folders)
