[project]
name = "sts2-modding-mcp"
version = "1.0.0"
description = "MCP server for Slay the Spire 2 modding - reverse-engineered game data, mod scaffolding, building, and deployment"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
