[project]
name = "sts2-modding-mcp"
version = "3.4.0"
description = "MCP server for Slay the Spire 2 modding - reverse-engineered game data, mod scaffolding, building, and deployment"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
images = [
    "google-genai>=1.0.0",
    "Pillow>=10.0",
    "rembg>=2.0",
    "numpy>=1.24",
]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
sts2mcp-setup = "sts2mcp.setup:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sts2mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
